changed profile in account.html style

--- a/account.html
+++ b/account.html
@@ -88,19 +88,19 @@
                 <div class="acctrect-left">
                     <div class="row">
                         <div class="col-md-6">
-                            <h5>NAME</h5>
-                            <h6>Lica</h6> <br>
-                            <h5>EMAIL</h5>
-                            <h6>licaloveskacaang@email.com</h6>
+                            <h6>Name</h6>
+                            <p>Lica</p> <br>
+                            <h6>Email</h6>
+                            <p>licaloveskacaang@email.com</p>
                         </div>
                         <div class="col-md-6">
-                            <h5 class="p-20-px-color-orange">ADDRESS</h5>
-                            <h6 class="p-color-orange">
-                                BLK 655 BUKIT PANJANG RING ROAD<br>
+                            <h6>Address</h6>
+                            <p>
+                                Blk 655 Bukit Panjang Ring Road<br>
                                 #14-76<br>
-                                SINGAPORE 687655<br>
-                                SINGAPORE
-                            </h6>
+                                Singapore 687655<br>
+                                Singapore
+                            </p>
                         </div>
                     </div>
                     <br>
@@ -118,7 +118,8 @@
             <div id="pastorders" class="tabacctcontent">
                 <div class="acctrect">
                     <h6>You haven't placed any orders yet.</h6> <br>
-                    <button class="actionbutton"><a href="shop.html" class="contact-link-no-underline">Shop Now</a></button>
+                    <button class="actionbutton"><a href="shop.html" class="contact-link-no-underline">Shop
+                            Now</a></button>
                 </div>
             </div>
             <!-- rewards tab -->
@@ -155,18 +156,15 @@
             <!-- points history tab -->
             <div id="pointshistory" class="tabacctcontent">
                 <div class="acctrect-right">
-                    <h6 class="dark-brown-font">November 2023</h6> <br>
-                    <button class="actionbutton">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <h6>Welcome Points!</h6>
-                                <p>11 November 2023</p>
-                            </div>
-                            <div class="col-md-6">
-                                <h6 class="alignright">+150</h6>
-                            </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h6>Welcome Points!</h6>
+                            <p>11 November 2023</p>
                         </div>
-                    </button>
+                        <div class="col-md-6">
+                            <h6 class="alignright">+150</h6>
+                        </div>
+                    </div>
                 </div>
             </div>
 
