shope.html and chillicrab.html responsive now

--- a/shop.html
+++ b/shop.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop - KACAANG </title>
 
     <!--Bootstrap-->
@@ -29,6 +30,9 @@
   </header>
   <body>
     <div class="page-10-percent">
+      <div class="shop-title">
+        <h1>Get Crunchin'</h1>
+      </div>
       <!-- tab buttons -->
       <div class="tab">
         <button class="tablinks" onclick="openTab(event, 'all')" id="defaultOpen">All</button>
@@ -48,10 +52,22 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/black-pepper-cashews.png" class="shop-product-img">
-            <h4> Black Pepper Cashews</h4>
+            <img src="images/products/black-pepper-cashews.png" class="shop-product-img">
+            <h5> Black Pepper Cashews</h5>
             <div class="shop-review-line">
-              <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
+              <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
+            </div>
+          </div>
+          </a>
+        </div>
+
+        <div class="shop-content">
+          <a href="chillicrab.html">
+          <div class="shop-product">
+            <img src="images/products/chilli-crab-cashews.png" class="shop-product-img">
+            <h5> Chilli Crab Cashews</h5>
+            <div class="shop-review-line">
+              <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
             </div>
           </div>
           </a>
@@ -60,10 +76,10 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/chilli-crab-cashews.png" class="shop-product-img">
-            <h4> Chilli Crab Cashews</h4>
+            <img src="images/products/chocolate-cashews.png" class="shop-product-img">
+            <h5> Chocolate Cashews</h5>
             <div class="shop-review-line">
-              <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
+              <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
             </div>
           </div>
           </a>
@@ -72,10 +88,10 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/chocolate-cashews.png" class="shop-product-img">
-            <h4> Chocolate Cashews</h4>
+            <img src="images/products/laksa-cashews.png" class="shop-product-img">
+            <h5> Laksa Cashews</h5>
             <div class="shop-review-line">
-              <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
+              <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
             </div>
           </div>
           </a>
@@ -84,10 +100,10 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/laksa-cashews.png" class="shop-product-img">
-            <h4> Laksa Cashews</h4>
+            <img src="images/products/biscoff-cashews.png" class="shop-product-img">
+            <h5> Lotus Biscoff Cashews</h5>
             <div class="shop-review-line">
-              <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
+              <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
             </div>
           </div>
           </a>
@@ -96,10 +112,10 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/biscoff-cashews.png" class="shop-product-img">
-            <h4> Lotus Biscoff Cashews</h4>
+            <img src="images/products/mala-cashews.png" class="shop-product-img">
+            <h5> Mala Cashews</h5>
             <div class="shop-review-line">
-              <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
+              <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
             </div>
           </div>
           </a>
@@ -108,10 +124,10 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/mala-cashews.png" class="shop-product-img">
-            <h4> Mala Cashews</h4>
+            <img src="images/products/salt-cashews.png" class="shop-product-img">
+            <h5> Salt-roasted Cashews</h5>
             <div class="shop-review-line">
-              <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
+              <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
             </div>
           </div>
           </a>
@@ -120,10 +136,10 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/salt-cashews.png" class="shop-product-img">
-            <h4> Salt-roasted Cashews</h4>
+            <img src="images/products/salted-egg-cheese-cashews.png" class="shop-product-img">
+            <h5> Salted Egg and Cheese Cashews</h5>
             <div class="shop-review-line">
-              <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
+              <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
             </div>
           </div>
           </a>
@@ -132,58 +148,46 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/salted-egg-cheese-cashews.png" class="shop-product-img">
-            <h4> Salted Egg and Cheese Cashews</h4>
+            <img src="images/products/smoky-bbq-cashews.png" class="shop-product-img">
+            <h5> Smoky BBQ Cashews</h5>
             <div class="shop-review-line">
-              <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
+              <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
             </div>
           </div>
           </a>
         </div>
 
         <div class="shop-content">
-          <a href="#">
+          <a href="chillicrab.html">
           <div class="shop-product">
-            <img src="images/smoky-bbq-cashews.png" class="shop-product-img">
-            <h4> Smoky BBQ Cashews</h4>
+            <img src="images/products/chilli-crab-cashews.png" class="shop-product-img">
+            <h5> Bundle A</h5>
             <div class="shop-review-line">
-              <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
+              <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
             </div>
           </div>
           </a>
         </div>
 
         <div class="shop-content">
-          <a href="#">
+          <a href="chillicrab.html">
           <div class="shop-product">
-            <img src="images/chilli-crab-cashews.png" class="shop-product-img">
-            <h4> Bundle A</h4>
+            <img src="images/products/chilli-crab-cashews.png" class="shop-product-img">
+            <h5> Bundle B</h5>
             <div class="shop-review-line">
-              <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
+              <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
             </div>
           </div>
           </a>
         </div>
 
         <div class="shop-content">
-          <a href="#">
+          <a href="chillicrab.html">
           <div class="shop-product">
-            <img src="images/chilli-crab-cashews.png" class="shop-product-img">
-            <h4> Bundle B</h4>
+            <img src="images/products/chilli-crab-cashews.png" class="shop-product-img">
+            <h5> Bundle C</h5>
             <div class="shop-review-line">
-              <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
-            </div>
-          </div>
-          </a>
-        </div>
-
-        <div class="shop-content">
-          <a href="#">
-          <div class="shop-product">
-            <img src="images/chilli-crab-cashews.png" class="shop-product-img">
-            <h4> Bundle C</h4>
-            <div class="shop-review-line">
-              <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
+              <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
             </div>
           </div>
           </a>
@@ -198,22 +202,22 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/mala-cashews.png" class="shop-product-img">
-            <h4>  Mala Cashews</h4>
+            <img src="images/products/mala-cashews.png" class="shop-product-img">
+            <h5>  Mala Cashews</h5>
             <div class="shop-review-line">
-              <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
+              <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
             </div>
           </div>
           </a>
         </div>
 
         <div class="shop-content">
-          <a href="#">
+          <a href="chillicrab.html">
           <div class="shop-product">
-            <img src="images/chilli-crab-cashews.png" class="shop-product-img">
-            <h4> Bundle A</h4>
+            <img src="images/products/chilli-crab-cashews.png" class="shop-product-img">
+            <h5> Bundle A</h5>
             <div class="shop-review-line">
-              <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
+              <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
             </div>
           </div>
           </a>
@@ -227,10 +231,10 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/laksa-cashews.png" class="shop-product-img">
-            <h4>  Laksa Cashews </h4>
+            <img src="images/products/laksa-cashews.png" class="shop-product-img">
+            <h5>  Laksa Cashews </h5>
             <div class="shop-review-line">
-              <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
+              <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
             </div>
           </div>
           </a>
@@ -239,10 +243,10 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/biscoff-cashews.png" class="shop-product-img">
-            <h4> Lotus Biscoff Cashews</h4>
+            <img src="images/products/biscoff-cashews.png" class="shop-product-img">
+            <h5> Lotus Biscoff Cashews</h5>
             <div class="shop-review-line">
-              <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
+              <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
             </div>
           </div>
           </a>
@@ -251,10 +255,10 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/mala-cashews.png" class="shop-product-img">
-            <h4> Mala Cashews</h4>
+            <img src="images/products/mala-cashews.png" class="shop-product-img">
+            <h5> Mala Cashews</h5>
             <div class="shop-review-line">
-              <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
+              <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
             </div>
           </div>
           </a>
@@ -266,12 +270,12 @@
       <div id="favourites" class="tabcontent">
 
         <div class="shop-content">
-          <a href="#">
+          <a href="chillicrab.html">
           <div class="shop-product">
-            <img src="images/chilli-crab-cashews.png" class="shop-product-img">
-            <h4>  Chilli Crab Cashews </h4>
+            <img src="images/products/chilli-crab-cashews.png" class="shop-product-img">
+            <h5>  Chilli Crab Cashews </h5>
             <div class="shop-review-line">
-              <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
+              <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
             </div>
           </div>
           </a>
@@ -280,10 +284,10 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/biscoff-cashews.png" class="shop-product-img">
-            <h4> Lotus Biscoff Cashews</h4>
+            <img src="images/products/biscoff-cashews.png" class="shop-product-img">
+            <h5> Lotus Biscoff Cashews</h5>
             <div class="shop-review-line">
-              <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
+              <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
             </div>
           </div>
           </a>
@@ -292,10 +296,10 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/salted-egg-cheese-cashews.png" class="shop-product-img">
-            <h4> Salted Egg and Cheese Cashews</h4>
+            <img src="images/products/salted-egg-cheese-cashews.png" class="shop-product-img">
+            <h5> Salted Egg and Cheese Cashews</h5>
             <div class="shop-review-line">
-              <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
+              <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
             </div>
           </div>
           </a>
@@ -309,10 +313,10 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/chocolate-cashews.png" class="shop-product-img">
-            <h4>  Chocolate Cashews </h4>
+            <img src="images/products/chocolate-cashews.png" class="shop-product-img">
+            <h5>  Chocolate Cashews </h5>
             <div class="shop-review-line">
-              <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
+              <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
             </div>
           </div>
           </a>
@@ -321,10 +325,10 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/salt-cashews.png" class="shop-product-img">
-            <h4> Salt-roasted Cashews</h4>
+            <img src="images/products/salt-cashews.png" class="shop-product-img">
+            <h5> Salt-roasted Cashews</h5>
             <div class="shop-review-line">
-              <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
+              <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
             </div>
           </div>
           </a>
@@ -333,10 +337,10 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/smoky-bbq-cashews.png" class="shop-product-img">
-            <h4> Smoky BBQ Cashews</h4>
+            <img src="images/products/smoky-bbq-cashews.png" class="shop-product-img">
+            <h5> Smoky BBQ Cashews</h5>
             <div class="shop-review-line">
-              <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
+              <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
             </div>
           </div>
           </a>
@@ -348,12 +352,12 @@
        <div id="local" class="tabcontent">
 
         <div class="shop-content">
-          <a href="#">
+          <a href="chillicrab.html">
           <div class="shop-product">
-            <img src="images/chilli-crab-cashews.png" class="shop-product-img">
-            <h4>  Chilli Crab Cashews </h4>
+            <img src="images/products/chilli-crab-cashews.png" class="shop-product-img">
+            <h5>  Chilli Crab Cashews </h5>
             <div class="shop-review-line">
-              <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
+              <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
             </div>
           </div>
           </a>
@@ -362,10 +366,10 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/laksa-cashews.png" class="shop-product-img">
-            <h4> Laksa Cashews</h4>
+            <img src="images/products/laksa-cashews.png" class="shop-product-img">
+            <h5> Laksa Cashews</h5>
             <div class="shop-review-line">
-              <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
+              <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
             </div>
           </div>
           </a>
@@ -374,10 +378,10 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/mala-cashews.png" class="shop-product-img">
-            <h4> Mala Cashews</h4>
+            <img src="images/products/mala-cashews.png" class="shop-product-img">
+            <h5> Mala Cashews</h5>
             <div class="shop-review-line">
-              <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
+              <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
             </div>
           </div>
           </a>
@@ -386,10 +390,10 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/salted-egg-cheese-cashews.png" class="shop-product-img">
-            <h4> Salted Egg and Cheese Cashews</h4>
+            <img src="images/products/salted-egg-cheese-cashews.png" class="shop-product-img">
+            <h5> Salted Egg and Cheese Cashews</h5>
             <div class="shop-review-line">
-              <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
+              <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
             </div>
           </div>
           </a>
@@ -403,10 +407,10 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/chilli-crab-cashews.png" class="shop-product-img">
-            <h4>  Bundle A </h4>
+            <img src="images/products/chilli-crab-cashews.png" class="shop-product-img">
+            <h5>  Bundle A </h5>
             <div class="shop-review-line">
-              <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
+              <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
             </div>
           </div>
           </a>
@@ -415,10 +419,10 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/chilli-crab-cashews.png" class="shop-product-img">
-            <h4> Bundle B</h4>
+            <img src="images/products/chilli-crab-cashews.png" class="shop-product-img">
+            <h5> Bundle B</h5>
             <div class="shop-review-line">
-              <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
+              <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
             </div>
           </div>
           </a>
@@ -427,10 +431,10 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/chilli-crab-cashews.png" class="shop-product-img">
-            <h4> Bundle C</h4>
+            <img src="images/products/chilli-crab-cashews.png" class="shop-product-img">
+            <h5> Bundle C</h5>
             <div class="shop-review-line">
-              <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
+              <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
             </div>
           </div>
           </a>
