--- a/shop.html
+++ b/shop.html
@@ -34,7 +34,7 @@
         <h1>Get Crunchin'</h1>
       </div>
       <!-- tab buttons -->
-      <div class="tab">
+      <div class="tab shop-tab">
         <button class="tablinks" onclick="openTab(event, 'all')" id="defaultOpen">All</button>
         <button class="tablinks" onclick="openTab(event, 'sales')">On Sale</button>
         <button class="tablinks" onclick="openTab(event, 'new')">New</button>
@@ -47,7 +47,7 @@
       <!-- tab content -->
 
       <!-- all products -->
-      <div id="all" class="tabcontent">
+      <div id="all" class="tabcontent shop-tabcontent">
 
         <div class="shop-content">
           <a href="#">
@@ -197,7 +197,7 @@
       </div>
 
       <!-- On Sale -->
-      <div id="sales" class="tabcontent">
+      <div id="sales" class="tabcontent shop-tabcontent">
 
         <div class="shop-content">
           <a href="#">
@@ -226,7 +226,7 @@
       </div>
 
       <!-- new products-->
-      <div id="new" class="tabcontent">
+      <div id="new" class="tabcontent shop-tabcontent">
 
         <div class="shop-content">
           <a href="#">
@@ -267,7 +267,7 @@
       </div>
 
       <!-- fan favourites-->
-      <div id="favourites" class="tabcontent">
+      <div id="favourites" class="tabcontent shop-tabcontent">
 
         <div class="shop-content">
           <a href="chillicrab.html">
@@ -308,7 +308,7 @@
       </div>
 
       <!-- classics-->
-      <div id="classics" class="tabcontent">
+      <div id="classics" class="tabcontent shop-tabcontent">
 
         <div class="shop-content">
           <a href="#">
@@ -349,7 +349,7 @@
       </div>
 
        <!-- local-->
-       <div id="local" class="tabcontent">
+       <div id="local" class="tabcontent shop-tabcontent">
 
         <div class="shop-content">
           <a href="chillicrab.html">
@@ -402,7 +402,7 @@
       </div>
 
       <!-- bundles-->
-      <div id="local" class="tabcontent">
+      <div id="local" class="tabcontent shop-tabcontent">
 
         <div class="shop-content">
           <a href="#">
@@ -447,7 +447,79 @@
 
 
     </div>
-    
+
+    <!--web footer-->
+    <div class="web-footer">
+      <div class="row-footer">
+          <div class="row">
+              <div class="col-sm-2">
+                  <a href="index.html"><img class="Kacaang-logo" src="images/logo.png"></a>
+              </div>
+              <div class="col-sm-2 offset-sm-1">
+                  <a class="footer-link" href="shop.html">SHOP</a> <br>
+                  <a class="footer-link" href="shop.html">SALES</a> <br>
+                  <a class="footer-link" href="corporate.html">OCCASIONS</a> <br>
+                  <a class="footer-link" href="corporate.html">CORPORATE</a> <br>
+                  <a class="footer-link" href="faqs.html">FAQS</a>
+              </div>
+              <div class="col-sm-3 offset-sm-1">
+                  <a class="footer-link" href="about-us.html">OUR STORY</a> <br>
+                  <a class="footer-link" href="farm.html">OUR FARM</a> <br>
+                  <a class="footer-link" href="#">CASHEW CRAZE CLUB</a> <br>
+                  <a class="footer-link" href="contact-us.html">CONTACT US</a> <br>
+                  <div class="icons">
+                      <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                      <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                      <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                      <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+                  </div>
+              </div>
+              <div class="col-sm-3">
+                  <a class="footer-link" href="#">PRIVACY POLICY</a> <br>
+                  <a class="footer-link" href="#">TERMS AND CONDITIONS</a> <br>
+              </div>
+          </div>
+          <div class="copyright">
+              <p class="copyright">COPYRIGHT &copy; 2023 KACAANG. ALL RIGHTS RESERVED.</p>
+          </div>
+      </div>
+      <img src="images/nuts-banner.png" style="width: 100%;">
+  </div>
+  <!--mobile footer-->
+  <div class="mobile-footer">
+      <div class="row-footer">
+          <a href="index.html"><img class="Kacaang-logo" src="images/logo.png">
+          <div class="mobile-footer-links">
+              <a class="mobile-footer-links" href="shop.html">SHOP</a> <br>
+              <a class="mobile-footer-links" href="shop.html">PROMOTIONS</a> <br>
+              <a class="mobile-footer-links" href="corporate.html">OCCASIONS</a> <br>
+              <a class="mobile-footer-links" href="corporate.html">CORPORATE</a> <br>
+              <a class="mobile-footer-links" href="faqs.html">FAQS</a> <br>
+              <a class="mobile-footer-links" href="about-us.html">OUR STORY</a> <br>
+              <a class="mobile-footer-links" href="farm.html">OUR FARM</a> <br>
+              <a class="mobile-footer-links" href="#">CASHEW CRAZE CLUB</a> <br>
+              <a class="mobile-footer-links" href="contact-us.html">CONTACT US</a> <br>
+              <div class="icons">
+                  <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                  <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                  <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                  <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+              </div>
+          </div>
+          <div class="privacy-tandc">
+              <a class="mobile-footer-links" href="#">PRIVACY POLICY &nbsp;</a>
+              <p style="font-family: 'Comfortaa', sans-serif;
+              color: #EDA23F;
+              font-size: 14px;
+              font-weight: bold;"></p>
+              <a class="mobile-footer-links" href="#">TERMS AND CONDITIONS</a> <br>
+          </div>
+          <div class="copyright">
+              <p class="copyright">COPYRIGHT &copy; 2023 KACAANG. ALL RIGHTS RESERVED.</p>
+          </div>
+      </div>
+      <img src="images/nuts-banner.png" style="width: 100%;">
+  </div>
 
   </body>
 </html>
