--- a/chillicrab.html
+++ b/chillicrab.html
@@ -36,7 +36,7 @@
     </div>
   
       <!-- actual content -->
-      <div class="product-info page-10-percent" id="product-info">
+    <div class="product-info page-10-percent" id="product-info">
         <div class="product-info-content">
           <!-- 3 part grid starts here -->
           <!-- first column -->
@@ -94,10 +94,9 @@
             </div>
           </div>
         </div>
-      </div>
+    </div>
 
       <!-- other flavours -->
-      <div class="row-10">
         <div class="flavour-spices page-10-percent">
             <div class="row suggested-scroll" style="padding-bottom: 2.8%;">
                 <h3>Suggested Flavours For You</h3>
@@ -160,11 +159,80 @@
                 </div>
             </div>
         </div>
+
+        <!--web footer-->
+    <div class="web-footer">
+        <div class="row-footer">
+            <div class="row">
+                <div class="col-sm-2">
+                    <a href="index.html"><img class="Kacaang-logo" src="images/logo.png"></a>
+                </div>
+                <div class="col-sm-2 offset-sm-1">
+                    <a class="footer-link" href="shop.html">SHOP</a> <br>
+                    <a class="footer-link" href="shop.html">SALES</a> <br>
+                    <a class="footer-link" href="corporate.html">OCCASIONS</a> <br>
+                    <a class="footer-link" href="corporate.html">CORPORATE</a> <br>
+                    <a class="footer-link" href="faqs.html">FAQS</a>
+                </div>
+                <div class="col-sm-3 offset-sm-1">
+                    <a class="footer-link" href="about-us.html">OUR STORY</a> <br>
+                    <a class="footer-link" href="farm.html">OUR FARM</a> <br>
+                    <a class="footer-link" href="#">CASHEW CRAZE CLUB</a> <br>
+                    <a class="footer-link" href="contact-us.html">CONTACT US</a> <br>
+                    <div class="icons">
+                        <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <a class="footer-link" href="#">PRIVACY POLICY</a> <br>
+                    <a class="footer-link" href="#">TERMS AND CONDITIONS</a> <br>
+                </div>
+            </div>
+            <div class="copyright">
+                <p class="copyright">COPYRIGHT &copy; 2023 KACAANG. ALL RIGHTS RESERVED.</p>
+            </div>
+        </div>
+        <img src="images/nuts-banner.png" style="width: 100%;">
+    </div>
+    <!--mobile footer-->
+    <div class="mobile-footer">
+        <div class="row-footer">
+            <a href="index.html"><img class="Kacaang-logo" src="images/logo.png">
+            <div class="mobile-footer-links">
+                <a class="mobile-footer-links" href="shop.html">SHOP</a> <br>
+                <a class="mobile-footer-links" href="shop.html">PROMOTIONS</a> <br>
+                <a class="mobile-footer-links" href="corporate.html">OCCASIONS</a> <br>
+                <a class="mobile-footer-links" href="corporate.html">CORPORATE</a> <br>
+                <a class="mobile-footer-links" href="faqs.html">FAQS</a> <br>
+                <a class="mobile-footer-links" href="about-us.html">OUR STORY</a> <br>
+                <a class="mobile-footer-links" href="farm.html">OUR FARM</a> <br>
+                <a class="mobile-footer-links" href="#">CASHEW CRAZE CLUB</a> <br>
+                <a class="mobile-footer-links" href="contact-us.html">CONTACT US</a> <br>
+                <div class="icons">
+                    <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+                </div>
+            </div>
+            <div class="privacy-tandc">
+                <a class="mobile-footer-links" href="#">PRIVACY POLICY &nbsp;</a>
+                <p style="font-family: 'Comfortaa', sans-serif;
+                color: #EDA23F;
+                font-size: 14px;
+                font-weight: bold;"></p>
+                <a class="mobile-footer-links" href="#">TERMS AND CONDITIONS</a> <br>
+            </div>
+            <div class="copyright">
+                <p class="copyright">COPYRIGHT &copy; 2023 KACAANG. ALL RIGHTS RESERVED.</p>
+            </div>
+        </div>
+        <img src="images/nuts-banner.png" style="width: 100%;">
     </div>
 
-
-      
-  
     
 </body>
 </html>
